# zurg

./: .dockerignore  .gitignore  CMakeLists.txt  CallbackClient.README.md  Dockerfile  Dockerfile.simple  LogManager.README.md  cmake-format.yaml  ops_acceptance_checklist.xlsx
.github/workflows/: ci-image.yml  documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
cmake/: fix_grpc_namespace.py
dev/: README.md
docker/: Dockerfile.callback-ci  Dockerfile.pcap  ci.Dockerfile
include/greeter/: greeter.h
include/zurg/: file_ops.h  logger_manager.h  pcap_ops.h
include/zurg/gnoi/: file_service.h  packet_capture_service.h
local/gtest/lib/cmake/GTest/: GTestTargets.cmake
local/gtest/lib/pkgconfig/: gtest.pc  gtest_main.pc
source/: greeter.cpp
source/zurg/: file_ops.cpp  logger_manager.cpp  pcap_ops.cpp
standalone/: CMakeLists.txt
standalone/source/: agent_main.cpp  gnoi_file_server.cpp
standalone/source/agent/: agent_impl.cpp  agent_impl.h
standalone/source/gnoi/: file_service.cpp  gnoi_file_selftest.cpp  packet_capture_service.cpp
test/: CMakeLists.txt
test/source/: agent_callback_test.cpp  agent_test.cpp  callback_agent_integration_test.cpp  file_ops_unit.cpp  gnoi_file.cpp  greeter.cpp  logger_manager_test.cpp  pcap_ops_test.cpp  smoke.cpp
